[gd_scene load_steps=12 format=3 uid="uid://o06t8w7cvrl3"]

[ext_resource type="Texture2D" uid="uid://bbvn33rur40ph" path="res://enemys/slim/史莱姆_绿_王冠.png" id="1_6v3b0"]
[ext_resource type="Script" path="res://enemys/stone/stone.gd" id="1_mm487"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iggg"]
size = Vector2(20, 11.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_s52qi"]
radius = 9.375

[sub_resource type="CircleShape2D" id="CircleShape2D_b6pue"]
radius = 88.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cv04g"]
atlas = ExtResource("1_6v3b0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycrlh"]
atlas = ExtResource("1_6v3b0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe8w7"]
atlas = ExtResource("1_6v3b0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpi0k"]
atlas = ExtResource("1_6v3b0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxdj4"]
atlas = ExtResource("1_6v3b0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2k80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv04g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycrlh")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe8w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpi0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxdj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpi0k")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="stone" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_mm487")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HP" type="Label" parent="."]
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = -24.0
horizontal_alignment = 1

[node name="hurt_area" type="Area2D" parent="."]

[node name="enemy_c" type="CollisionShape2D" parent="hurt_area"]
position = Vector2(3.38813e-21, 0)
scale = Vector2(1.6, 1.6)
shape = SubResource("RectangleShape2D_2iggg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.38813e-21, -2.38419e-07)
scale = Vector2(1.6, 1.6)
shape = SubResource("CircleShape2D_s52qi")

[node name="atk_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atk_area"]
shape = SubResource("CircleShape2D_b6pue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.298039, 0.298039, 0.298039, 1)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_a2k80")
animation = &"walk"

[node name="atk_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="atk_area" to="." method="_on_atk_area_area_entered"]
[connection signal="area_exited" from="atk_area" to="." method="_on_atk_area_area_exited"]
[connection signal="timeout" from="atk_timer" to="." method="_on_atk_timer_timeout"]
